[package]
name = "proxyster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.18"
dirs = "4.0.0"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["json"] }
scraper = "0.13.0"
select = "0.5.0"
selectors = "0.23.0"
serde = "1.0.147"
serde_derive = "1.0.147"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
