[package]
name = "proxyster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.18"
crossterm = "0.26.0"
dirs = "4.0.0"
proxyster-lib = "0.1.1"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["json"] }
scraper = "0.14.0"
select = "0.6.0"
selectors = "0.23.0"
serde = "1.0.147"
serde_derive = "1.0.147"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.7.2"
