[package]
name = "proxyster"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "daemon"
path = "src/daemon/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
clap = "4.1.6"
crossterm = "0.26.0"
dirs = "4.0.0"
futures = "0.3.26"
regex = "1.7.1"
reqwest = "0.11.14"
scraper = "0.14.0"
serde = "1.0.152"
serde_derive = "1.0.152"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
toml = "0.7.2"
url = "2.3.1"
